--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "zustand": "^4.5.1"
   },
