--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@
 
 DATABASE_URL=mongodb+srv://admin:bwuQHBjnWHKyPzH3@cluster0.0n13ayv.mongodb.net/Cluster0
 NEXTAUTH_SECRET="SECRET"
+GITHUB_ID="b839cbfebb10c184a7d4"
+GITHUB_SECRET="dd4cefb8eb1379fa3b9c9bb7d912b8be6be60c0b"
+GOOGLE_CLIENT_ID=954388679343-3t96glhkn4297icuhak31965smld286j.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
